urban-stress-platform/cdk/cdk.out/UrbanStressDatamart.template.json
{
 "Resources": {
  "UrbanStressVpc2AE86FA6": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "UrbanStressDatamart/UrbanStressVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/Resource"
   }
  },
  "UrbanStressVpcPublicSubnet1SubnetB3F9C79B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "UrbanStressVpc2AE86FA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet1/Subnet"
   }
  },
  "UrbanStressVpcPublicSubnet1RouteTableF1835D03": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "UrbanStressVpc2AE86FA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet1/RouteTable"
   }
  },
  "UrbanStressVpcPublicSubnet1RouteTableAssociation9B0A125F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "UrbanStressVpcPublicSubnet1RouteTableF1835D03"
    },
    "SubnetId": {
     "Ref": "UrbanStressVpcPublicSubnet1SubnetB3F9C79B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "UrbanStressVpcPublicSubnet1DefaultRoute73D82E77": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "UrbanStressVpcIGWA926538A"
    },
    "RouteTableId": {
     "Ref": "UrbanStressVpcPublicSubnet1RouteTableF1835D03"
    }
   },
   "DependsOn": [
    "UrbanStressVpcVPCGW0CA3C3FC"
   ],
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "UrbanStressVpcPublicSubnet2Subnet9557769E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "UrbanStressVpc2AE86FA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet2/Subnet"
   }
  },
  "UrbanStressVpcPublicSubnet2RouteTable01EF3D14": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "UrbanStressVpc2AE86FA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet2/RouteTable"
   }
  },
  "UrbanStressVpcPublicSubnet2RouteTableAssociationDF115030": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "UrbanStressVpcPublicSubnet2RouteTable01EF3D14"
    },
    "SubnetId": {
     "Ref": "UrbanStressVpcPublicSubnet2Subnet9557769E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "UrbanStressVpcPublicSubnet2DefaultRoute802833FE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "UrbanStressVpcIGWA926538A"
    },
    "RouteTableId": {
     "Ref": "UrbanStressVpcPublicSubnet2RouteTable01EF3D14"
    }
   },
   "DependsOn": [
    "UrbanStressVpcVPCGW0CA3C3FC"
   ],
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "UrbanStressVpcIGWA926538A": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UrbanStressDatamart/UrbanStressVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/IGW"
   }
  },
  "UrbanStressVpcVPCGW0CA3C3FC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "UrbanStressVpcIGWA926538A"
    },
    "VpcId": {
     "Ref": "UrbanStressVpc2AE86FA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressVpc/VPCGW"
   }
  },
  "RdsSg7F9F43B6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow Postgres from anywhere (class project - lock down in prod)",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Postgres from anywhere",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "VpcId": {
     "Ref": "UrbanStressVpc2AE86FA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/RdsSg/Resource"
   }
  },
  "DbSecret685A0FA5": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "IncludeSpace": false,
     "SecretStringTemplate": "{\"username\": \"postgres\"}"
    },
    "Name": "urban-stress/db-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/DbSecret/Resource"
   }
  },
  "DbSecretAttachment0609CE05": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DbSecret685A0FA5"
    },
    "TargetId": {
     "Ref": "UrbanStressDb57C845BC"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/DbSecret/Attachment/Resource"
   }
  },
  "UrbanStressDbSubnetGroupDF6EB3D6": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for UrbanStressDb database",
    "SubnetIds": [
     {
      "Ref": "UrbanStressVpcPublicSubnet1SubnetB3F9C79B"
     },
     {
      "Ref": "UrbanStressVpcPublicSubnet2Subnet9557769E"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressDb/SubnetGroup/Default"
   }
  },
  "UrbanStressDb57C845BC": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "postgres",
    "DBSubnetGroupName": {
     "Ref": "UrbanStressDbSubnetGroupDF6EB3D6"
    },
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "15",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DbSecret685A0FA5"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DbSecret685A0FA5"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "MonitoringInterval": 0,
    "PubliclyAccessible": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "RdsSg7F9F43B6",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/UrbanStressDb/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WP3W7CMAyFn4X7NKydeAAGEuJqVYu4ndzgQUabVLEjVFV9d9KftWi78vHnI9snkckmlm8reFCkLveo1IVscwZ1FwF9tagS2Z5rJXbf5pzuROqLUqvcFwa5Z4vKrGc8QVHiwhe2JbJKA2trZnMvjobRBecBGB/QTGembsvhkVuFhkWOyjvNzcFZXw8HXkEnCJVDpgoMXNGFCEM/GXs1lhO4K/LL3tnwd9IJdyHZ7oGhAMKjIQajUIzB5jf2H//Ar7XrRIZkvVND0k/PtQ9r04Zv1qzfZRzLzeqHtI6cN6wrlNlYn8UugyWUAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "UrbanStressDatamart/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "UrbanStressVpc2AE86FA6"
   },
   "Export": {
    "Name": "UrbanStress-VpcId"
   }
  },
  "DbSecretArn": {
   "Value": {
    "Ref": "DbSecret685A0FA5"
   },
   "Export": {
    "Name": "UrbanStress-DbSecretArn"
   }
  },
  "DbEndpoint": {
   "Value": {
    "Fn::GetAtt": [
     "UrbanStressDb57C845BC",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "UrbanStress-DbEndpoint"
   }
  },
  "ExportsOutputFnGetAttUrbanStressDb57C845BCEndpointAddress5247EDA7": {
   "Value": {
    "Fn::GetAtt": [
     "UrbanStressDb57C845BC",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "UrbanStressDatamart:ExportsOutputFnGetAttUrbanStressDb57C845BCEndpointAddress5247EDA7"
   }
  },
  "ExportsOutputRefDbSecret685A0FA57881E1C6": {
   "Value": {
    "Ref": "DbSecret685A0FA5"
   },
   "Export": {
    "Name": "UrbanStressDatamart:ExportsOutputRefDbSecret685A0FA57881E1C6"
   }
  },
  "ExportsOutputRefUrbanStressVpc2AE86FA65E024251": {
   "Value": {
    "Ref": "UrbanStressVpc2AE86FA6"
   },
   "Export": {
    "Name": "UrbanStressDatamart:ExportsOutputRefUrbanStressVpc2AE86FA65E024251"
   }
  },
  "ExportsOutputRefUrbanStressVpcPublicSubnet1SubnetB3F9C79BB7FB4087": {
   "Value": {
    "Ref": "UrbanStressVpcPublicSubnet1SubnetB3F9C79B"
   },
   "Export": {
    "Name": "UrbanStressDatamart:ExportsOutputRefUrbanStressVpcPublicSubnet1SubnetB3F9C79BB7FB4087"
   }
  },
  "ExportsOutputRefUrbanStressVpcPublicSubnet2Subnet9557769E4F7FA592": {
   "Value": {
    "Ref": "UrbanStressVpcPublicSubnet2Subnet9557769E"
   },
   "Export": {
    "Name": "UrbanStressDatamart:ExportsOutputRefUrbanStressVpcPublicSubnet2Subnet9557769E4F7FA592"
   }
  }
 }
}
